k8s/apps/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        ports:
        - name: http
          containerPort: 8989
          protocol: TCP
        volumeMounts:
        - name: tv-volume
          mountPath: /tv
        - name: downloads-volume
          mountPath: /downloads
        - name: config-volume
          mountPath: /config
      volumes:
      - name: tv-volume
        persistentVolumeClaim:
          claimName: sonarr-tv
      - name: downloads-volume
        persistentVolumeClaim:
          claimName: transmission-data
      - name: config-volume
        persistentVolumeClaim:
          claimName: sonarr-config
